RESOLVED FIXED165210
[CSS Parser] Fix columns shorthand parsing
https://bugs.webkit.org/show_bug.cgi?id=165210
Summary [CSS Parser] Fix columns shorthand parsing
Dave Hyatt
Reported 2016-11-30 12:16:45 PST
[CSS Parser] Fix columns shorthand parsing
Attachments
Patch (4.05 KB, patch)
2016-11-30 12:18 PST, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-11-30 12:18:00 PST
Dave Hyatt
Comment 2 2016-11-30 12:39:12 PST
Fixed in r209148.
Note You need to log in before you can comment on or make changes to this bug.