[CSS Parser] Fix columns shorthand parsing https://bugs.webkit.org/show_bug.cgi?id=165210

Reviewed by Zalan Bujtas.

* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeColumns):
(WebCore::consumeColumnWidthOrCount): Deleted.
Bring over the old parser code, since it was actually better at creating implicit values for auto.



Canonical link: https://commits.webkit.org/182834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209148 268f45cc-cd09-0410-ab3c-d52691b4dbfc